Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/ULightComponent.h

	DOTNET_EXPORT auto E_ULightComponent_AddTickPrerequisiteActor(ULightComponent* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->AddTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_AddTickPrerequisiteComponent(ULightComponent* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->AddTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_BeginPlay(ULightComponent* Self)
	{
		Self->BeginPlay();
	}
	DOTNET_EXPORT auto E_ULightComponent_CreateRenderState_Concurrent(ULightComponent* Self)
	{
		Self->CreateRenderState_Concurrent();
	}
	DOTNET_EXPORT auto E_ULightComponent_Deactivate(ULightComponent* Self)
	{
		Self->Deactivate();
	}
	DOTNET_EXPORT auto E_ULightComponent_DestroyRenderState_Concurrent(ULightComponent* Self)
	{
		Self->DestroyRenderState_Concurrent();
	}
	DOTNET_EXPORT auto E_ULightComponent_GetComponentClassCanReplicate(ULightComponent* Self)
	{
		return Self->GetComponentClassCanReplicate();
	}
	DOTNET_EXPORT auto E_ULightComponent_GetReadableName(ULightComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetReadableName());
	}
	DOTNET_EXPORT auto E_ULightComponent_HasValidPhysicsState(ULightComponent* Self)
	{
		return Self->HasValidPhysicsState();
	}
	DOTNET_EXPORT auto E_ULightComponent_InitializeComponent(ULightComponent* Self)
	{
		Self->InitializeComponent();
	}
	DOTNET_EXPORT auto E_ULightComponent_InvalidateLightingCacheDetailed(ULightComponent* Self, bool bInvalidateBuildEnqueuedLighting, bool bTranslationOnly)
	{
		auto _p0 = bInvalidateBuildEnqueuedLighting;
		auto _p1 = bTranslationOnly;
		Self->InvalidateLightingCacheDetailed(_p0, _p1);
	}
	DOTNET_EXPORT auto E_ULightComponent_IsActive(ULightComponent* Self)
	{
		return Self->IsActive();
	}
	DOTNET_EXPORT auto E_ULightComponent_IsEditorOnly(ULightComponent* Self)
	{
		return Self->IsEditorOnly();
	}
	DOTNET_EXPORT auto E_ULightComponent_IsNameStableForNetworking(ULightComponent* Self)
	{
		return Self->IsNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_ULightComponent_IsNavigationRelevant(ULightComponent* Self)
	{
		return Self->IsNavigationRelevant();
	}
	DOTNET_EXPORT auto E_ULightComponent_IsReadyForOwnerToAutoDestroy(ULightComponent* Self)
	{
		return Self->IsReadyForOwnerToAutoDestroy();
	}
	DOTNET_EXPORT auto E_ULightComponent_IsSupportedForNetworking(ULightComponent* Self)
	{
		return Self->IsSupportedForNetworking();
	}
	DOTNET_EXPORT auto E_ULightComponent_MarkAsEditorOnlySubobject(ULightComponent* Self)
	{
		Self->MarkAsEditorOnlySubobject();
	}
	DOTNET_EXPORT auto E_ULightComponent_NeedsLoadForClient(ULightComponent* Self)
	{
		return Self->NeedsLoadForClient();
	}
	DOTNET_EXPORT auto E_ULightComponent_NeedsLoadForEditorGame(ULightComponent* Self)
	{
		return Self->NeedsLoadForEditorGame();
	}
	DOTNET_EXPORT auto E_ULightComponent_NeedsLoadForServer(ULightComponent* Self)
	{
		return Self->NeedsLoadForServer();
	}
	DOTNET_EXPORT auto E_ULightComponent_OnActorEnableCollisionChanged(ULightComponent* Self)
	{
		Self->OnActorEnableCollisionChanged();
	}
	DOTNET_EXPORT auto E_ULightComponent_OnComponentCreated(ULightComponent* Self)
	{
		Self->OnComponentCreated();
	}
	DOTNET_EXPORT auto E_ULightComponent_OnCreatePhysicsState(ULightComponent* Self)
	{
		((E_PROTECTED_WRAP_ULightComponent*)Self)->OnCreatePhysicsState_WRAP();
	}
	DOTNET_EXPORT auto E_ULightComponent_OnDestroyPhysicsState(ULightComponent* Self)
	{
		((E_PROTECTED_WRAP_ULightComponent*)Self)->OnDestroyPhysicsState_WRAP();
	}
	DOTNET_EXPORT auto E_ULightComponent_PostInitProperties(ULightComponent* Self)
	{
		Self->PostInitProperties();
	}
	DOTNET_EXPORT auto E_ULightComponent_PostLoad(ULightComponent* Self)
	{
		Self->PostLoad();
	}
	DOTNET_EXPORT auto E_ULightComponent_PostRename(ULightComponent* Self, UObject* OldOuter, char* OldName)
	{
		auto _p0 = OldOuter;
		auto _p1 = ConvertFromManage_FName(OldName);
		Self->PostRename(_p0, _p1);
	}
	DOTNET_EXPORT auto E_ULightComponent_RegisterComponentTickFunctions(ULightComponent* Self, bool bRegister)
	{
		auto _p0 = bRegister;
		Self->RegisterComponentTickFunctions(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_RemoveTickPrerequisiteActor(ULightComponent* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->RemoveTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_RemoveTickPrerequisiteComponent(ULightComponent* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->RemoveTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_RequiresGameThreadEndOfFrameRecreate(ULightComponent* Self)
	{
		return Self->RequiresGameThreadEndOfFrameRecreate();
	}
	DOTNET_EXPORT auto E_ULightComponent_RequiresGameThreadEndOfFrameUpdates(ULightComponent* Self)
	{
		return Self->RequiresGameThreadEndOfFrameUpdates();
	}
	DOTNET_EXPORT auto E_ULightComponent_SendRenderDynamicData_Concurrent(ULightComponent* Self)
	{
		((E_PROTECTED_WRAP_ULightComponent*)Self)->SendRenderDynamicData_Concurrent_WRAP();
	}
	DOTNET_EXPORT auto E_ULightComponent_SendRenderTransform_Concurrent(ULightComponent* Self)
	{
		Self->SendRenderTransform_Concurrent();
	}
	DOTNET_EXPORT auto E_ULightComponent_SetActive(ULightComponent* Self, bool bNewActive, bool bReset)
	{
		auto _p0 = bNewActive;
		auto _p1 = bReset;
		Self->SetActive(_p0, _p1);
	}
	DOTNET_EXPORT auto E_ULightComponent_SetAutoActivate(ULightComponent* Self, bool bNewAutoActivate)
	{
		auto _p0 = bNewAutoActivate;
		Self->SetAutoActivate(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_SetComponentTickEnabled(ULightComponent* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetComponentTickEnabled(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_SetComponentTickEnabledAsync(ULightComponent* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetComponentTickEnabledAsync(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_ShouldActivate(ULightComponent* Self)
	{
		return ((E_PROTECTED_WRAP_ULightComponent*)Self)->ShouldActivate_WRAP();
	}
	DOTNET_EXPORT auto E_ULightComponent_ShouldCreatePhysicsState(ULightComponent* Self)
	{
		return Self->ShouldCreatePhysicsState();
	}
	DOTNET_EXPORT auto E_ULightComponent_ToggleActive(ULightComponent* Self)
	{
		Self->ToggleActive();
	}
	DOTNET_EXPORT auto E_ULightComponent_UninitializeComponent(ULightComponent* Self)
	{
		Self->UninitializeComponent();
	}
	DOTNET_EXPORT auto E_ULightComponent_AreNativePropertiesIdenticalTo(ULightComponent* Self, UObject* Other)
	{
		auto _p0 = Other;
		return Self->AreNativePropertiesIdenticalTo(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_CheckDefaultSubobjectsInternal(ULightComponent* Self)
	{
		return Self->CheckDefaultSubobjectsInternal();
	}
	DOTNET_EXPORT auto E_ULightComponent_FinishDestroy(ULightComponent* Self)
	{
		Self->FinishDestroy();
	}
	DOTNET_EXPORT auto E_ULightComponent_GetDesc(ULightComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDesc());
	}
	DOTNET_EXPORT auto E_ULightComponent_GetDetailedInfoInternal(ULightComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDetailedInfoInternal());
	}
	DOTNET_EXPORT auto E_ULightComponent_IsAsset(ULightComponent* Self)
	{
		return Self->IsAsset();
	}
	DOTNET_EXPORT auto E_ULightComponent_IsFullNameStableForNetworking(ULightComponent* Self)
	{
		return Self->IsFullNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_ULightComponent_IsLocalizedResource(ULightComponent* Self)
	{
		return Self->IsLocalizedResource();
	}
	DOTNET_EXPORT auto E_ULightComponent_IsPostLoadThreadSafe(ULightComponent* Self)
	{
		return Self->IsPostLoadThreadSafe();
	}
	DOTNET_EXPORT auto E_ULightComponent_IsReadyForFinishDestroy(ULightComponent* Self)
	{
		return Self->IsReadyForFinishDestroy();
	}
	DOTNET_EXPORT auto E_ULightComponent_IsSafeForRootSet(ULightComponent* Self)
	{
		return Self->IsSafeForRootSet();
	}
	DOTNET_EXPORT auto E_ULightComponent_Modify(ULightComponent* Self, bool bAlwaysMarkDirty)
	{
		auto _p0 = bAlwaysMarkDirty;
		return Self->Modify(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_NotifyObjectReferenceEliminated(ULightComponent* Self)
	{
		Self->NotifyObjectReferenceEliminated();
	}
	DOTNET_EXPORT auto E_ULightComponent_PostCDOContruct(ULightComponent* Self)
	{
		Self->PostCDOContruct();
	}
	DOTNET_EXPORT auto E_ULightComponent_PostEditImport(ULightComponent* Self)
	{
		Self->PostEditImport();
	}
	DOTNET_EXPORT auto E_ULightComponent_PostSaveRoot(ULightComponent* Self, bool bCleanupIsRequired)
	{
		auto _p0 = bCleanupIsRequired;
		Self->PostSaveRoot(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_PreDestroyFromReplication(ULightComponent* Self)
	{
		Self->PreDestroyFromReplication();
	}
	DOTNET_EXPORT auto E_ULightComponent_ShutdownAfterError(ULightComponent* Self)
	{
		Self->ShutdownAfterError();
	}
	DOTNET_EXPORT auto E_ULightComponent_AddToCluster(ULightComponent* Self, UObjectBaseUtility* ClusterRootOrObjectFromCluster, bool bAddAsMutableObject)
	{
		auto _p0 = ClusterRootOrObjectFromCluster;
		auto _p1 = bAddAsMutableObject;
		Self->AddToCluster(_p0, _p1);
	}
	DOTNET_EXPORT auto E_ULightComponent_CanBeClusterRoot(ULightComponent* Self)
	{
		return Self->CanBeClusterRoot();
	}
	DOTNET_EXPORT auto E_ULightComponent_CanBeInCluster(ULightComponent* Self)
	{
		return Self->CanBeInCluster();
	}